overflow fix

--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
     height: 100vh;
     width: 100vw;
 
@@ -58,13 +59,6 @@
     padding: 0px 6.4px;
 }
 
-
-
-
-
-
-
-
 .btnContainer {
     display: flex;
     align-items: center;
@@ -105,4 +99,31 @@
 .btnRight:hover {
     color: white;
     border: 1px solid white;
+}
+
+
+@media screen and (max-width: 490px) {
+    .textContainer {
+        font-size: 40px;
+        letter-spacing: -7.6px;
+    }
+
+    .btnContainer {
+    
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        
+        
+
+    }
+
+
+    .btnRight {
+        margin-left: 0;
+        margin-top: 20px;
+
+
+    }
+    
 }
