--- a/styles/Section.module.css
+++ b/styles/Section.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
     height: 100vh;
     width: 100vw;
 
@@ -10,7 +11,6 @@
 
 .textContainer {
     display: flex;
-
     color: white;
     font-size:60px;
     padding: 0px 8px;
@@ -46,3 +46,16 @@
     cursor: pointer;
 }
 
+
+@media screen and (max-width: 490px) {
+    .textContainer {
+        font-size: 40px;
+        letter-spacing: -7.6px;
+    }
+
+    .imgContainer {
+        height: 200px;
+        width: 200px;
+    }
+
+}
